<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.robertkaczmarek.bmicalculator.BMI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E81C"
     >
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bmi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:background="#F8E81C"
   tools:context="com.example.robertkaczmarek.bmicalculator.BMI">



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/getheight"
        android:layout_row="0"
        android:layout_column="1"
        android:inputType="numberDecimal"
        android:layout_gravity="right"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/getweight"
        android:layout_row="1"
        android:layout_column="1"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:layout_gravity="right"
        />











    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BMIcalculate"
        android:onClick="calculate"
        android:layout_row="5"
        android:layout_gravity="bottom"
        android:layout_column="0"
        android:text="@string/calculate"
        android:layout_marginBottom="30dp"
        android:tag="@string/norma"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BMIclear"
        android:onClick="cleare"
        android:layout_row="5"
        android:layout_column="1"
        android:text="@string/clear"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"/>



    </GridLayout>
</ScrollView>