<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#F8E81C"
    tools:context="com.example.robertkaczmarek.bmicalculator.result">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textSize="20sp"
       android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        style="@style/YourBMI"
        />
    <TextView
        android:id="@+id/result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result1"

        android:layout_gravity="right"

        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        style="@style/result"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/obraz"
       android:layout_centerInParent="true"
       android:layout_below="@+id/result1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment3"
        android:layout_below="@+id/obraz"
      android:layout_centerHorizontal="true"


        />


    <TextView
        android:id="@+id/suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"

        android:layout_below="@+id/comment3"
        android:layout_marginTop="35dp"
       android:layout_marginLeft="20dp"

        />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_below="@+id/suggestion"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        style="@style/resultCommentN"
        />







    <TextView
        android:id="@+id/comment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment2"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/comment"
        android:layout_toRightOf="@+id/comment"
        android:layout_marginLeft="30dp"




        />




</RelativeLayout>
